fmt: update texts

--- a/documentation-site/pages/getting-started/start-design.page.mdx
+++ b/documentation-site/pages/getting-started/start-design.page.mdx
@@ -17,7 +17,7 @@ Framer not just displays components but let us drag and drop REAL components to 
 Lighthouse Design System provides a fully compatible Framer package using the same origins.
 <br />
 
-Start to Design with Lighthouse Design System or View all components on Lighthouse Gallery.
+Start designing with Lighthouse Design System or view all components on Lighthouse Gallery.
 
 <System.FlexBox columnGap="scale400" marginTop="scale1600">
   <System.FlexItem>
