--- a/documentation-site/pages/theme/theming.page.mdx
+++ b/documentation-site/pages/theme/theming.page.mdx
@@ -16,7 +16,7 @@ Theme data is a simple .json format, and each token could be used one by one as 
 
 ## Colors
 
-Colors in Lighthouse has three token kinds. Scale / Foundational / Semantic tokens are that. The kinds of tokens are linked rigidly for system balances of strictness and flexibility.
+Colors in Lighthouse has three kinds of tokens. Scale / Foundational / Semantic tokens are that. The kinds of tokens are linked rigidly for system balances of strictness and flexibility.
 <br/>
 
 It is fully customizable (edit, remove, add) using the [Theme Generator](/theme/theme-generator).
