fmt: update texts

--- a/documentation-site/pages/getting-started/background.page.mdx
+++ b/documentation-site/pages/getting-started/background.page.mdx
@@ -11,17 +11,17 @@ From last 2019 July, Lighthouse is initially started to develop for the Design S
 
 Here are the points that I share Lighthouse Design System as an open-source project.
 
-## Design & Developing in Same place and matter (Source of truth)
+## Design & Developing in same place and matter (Source of truth)
 
 It was time-consuming tasks moving designs to real development codes. Sometimes it has different shapes or sizes between development and design.
 
  And designers don't have a perfect solution for responsive design; after 10years, responsive concepts appear.
  <br />
 
-Lighthouse removes this big gap between design and development with the power of [Framer](http://www.framer.com/). (Framer is React based Design tool you can code and design.)
+Lighthouse removes this big gap between design and development with the power of [Framer](http://www.framer.com/). (Framer is React based design tool you can code and design.)
 <br />
 
-Anyone who uses Lighthouse Design System could design on Framer and directly develop it the same manner. As a result, you can design (or prototype) and develop without messy translator between ✌️
+Anyone who uses Lighthouse Design System could design on Framer and directly develop it the same manner. As a result, you can design (or prototype) and develop without messy translator between ✌️.
 
 ## Flexibility
 
@@ -35,7 +35,7 @@ The fundamental point is to split the base unit of your design into smaller toke
 
 ### 1. Atomic Design with Styletron
 
-Lighthouse's base Flexibility is mainly composed of [Styletron](https://www.styletron.org) and Inspired by [Base Web](https://github.com/uber/baseweb).
+Lighthouse's base flexibility is mainly composed of [Styletron](https://www.styletron.org) and inspired by [Base Web](https://github.com/uber/baseweb).
 
 Styletron enables us to merge and divide styles by tiny tokens.
 <br/>
@@ -51,7 +51,7 @@ It's a simple .json format you can simply import & export it to your project.
 ### 3. Overrides
 
 Even though after theming your system, you could find some limit to express your ideas.
-In these cases, Overrides helps resolve this gap to make custom styles for each component level.
+In these cases, overrides helps resolve this gap to make custom styles for each component level.
 <br/>
 
 Lighthouse offers overriding props enable us to make changes for each component detail.
