--- a/documentation-site/pages/getting-started/lighthouse-gallery.page.mdx
+++ b/documentation-site/pages/getting-started/lighthouse-gallery.page.mdx
@@ -17,9 +17,9 @@ It collects all components available in the System.
 
 Switching themes are available. (Light / Dark / Custom)
 
-Duplicate this Gallery if you want to change themes or make changes more details.
+Duplicate this gallery if you want to change themes or make changes more details.
 
-Upload .json file generated from [Theme Generator](/theme/theme-generator) for Custom Theme.
+Upload .json file generated from [Theme Generator](/theme/theme-generator) for custom theme.
 
 
 <System.FlexBox columnGap="scale400" marginTop="scale1600">
