--- a/documentation-site/pages/getting-started/start-code.page.mdx
+++ b/documentation-site/pages/getting-started/start-code.page.mdx
@@ -9,7 +9,7 @@ export default DocumentationLayout
 
 Lighthouse initially starts as a React UI Library.
 
-You can use the pure power of the system as an npm package like others.
+You can use the pure power of the system as an npm package.
 
 ## Installing Lighthouse
 
