--- a/documentation-site/pages/theme/theming.page.mdx
+++ b/documentation-site/pages/theme/theming.page.mdx
@@ -10,7 +10,7 @@ export default DocumentationLayout
 <br/>
 <br/>
 
-In this section, the Basic token structure of the theme is described below.
+In this section, the basic token structure of the theme is described below.
 
 Theme data is a simple .json format, and each token could be used one by one as a property of the JSON file.
 
@@ -42,7 +42,7 @@ It includes five kinds that are mostly used in the standard UI system.
 
 ### Semantic Colors
 
-Color semantic are colors of application UI that has semantic names.
+Semantic colors are colors of application UI that has semantic names.
 <br/>
 
 (These tokens are only composed of Color Scale or Foundational Colors.)
