feat: update texts

--- a/documentation-site/pages/getting-started/start-design.page.mdx
+++ b/documentation-site/pages/getting-started/start-design.page.mdx
@@ -12,9 +12,10 @@ export default DocumentationLayout
 Design and Prototype your next project using Lighthouse Design System on Framer.
 <br />
 
-Framer not just displays components but let us drag and drop real components to make new designs and prototypes.
+Lighthouse Design System provides Framer package fully compatable with written code.
 
-Lighthouse Design System provides a fully compatible Framer package using the same origins as development.
+Not only does Framer display components but lets us drag and drop real components to make new designs and prototypes.
+
 <br />
 
 Start designing with Lighthouse Design System or view all components on Lighthouse Gallery.
