fmt: update texts

--- a/documentation-site/pages/theme/theme-generator.page.mdx
+++ b/documentation-site/pages/theme/theme-generator.page.mdx
@@ -14,6 +14,9 @@ export default DocumentationLayout
 
 Use the Theme Generator to customize your theme.
 Make changes and copy the final output from the bottom of the page.
+<br/>
+
+All changes are applied directly to this site.
 
 ## Colors
 
@@ -41,7 +44,7 @@ New Semantic Colors
 
 Simply copy and save it as "my-theme.json".
 
-(It only saves Colors and Lighting data. Others will be added.)
+(It only saves Colors and Lighting data now. Others will be added.)
 
 <ImportExportTheme />
 
@@ -124,7 +127,7 @@ More information in [Start Design](/getting-started/start-design).
 
 Locate the "my-theme.json" file to your App's root.
 
-(The below example wrote for next.js, and you can customize it.)
+(The below example wrote for next.js, and you can customize it for others.)
 <br/>
 
 More information in [Start Code](/getting-started/start-code).
