docs: update text

--- a/documentation-site/pages/theme/theming.page.mdx
+++ b/documentation-site/pages/theme/theming.page.mdx
@@ -23,7 +23,7 @@ It is fully customizable (edit, remove, add) using the [Theme Generator](/theme/
 
 ### Color Scale
 
-The color scale is a base palette of the color system
+The color scale is a base palette of the color system.
 <br/>
 
 Lighthouse used [ColorBox](https://colorbox.io/) from Kevyn Arnott to generate the default color scale. It enables considering hue, saturation, brightness in an acceptable human manner at the same time.
@@ -53,7 +53,7 @@ Lightings are uses for box-shadows and overlay to highlight which element could 
 
 ## Typography
 
-You can add your custom typography styles
+You can add your custom typography styles.
 <br/>
 
 (Font files are not included in the system. Include it manually in your app.)
